Use a larger font in the extension badge when possible.

BUG=613576

Review-Url: https://codereview.chromium.org/2012313002
Cr-Commit-Position: refs/heads/master@{#396347}

Former-commit-id: 8ad66522f53d6d74da96d2c31f5af7c72bfb3673